# SDRPlusPlus

./: CMakeLists.txt
.github/workflows/: build_all.yml
android/app/: build.gradle
core/backends/android/: android_backend.h  backend.cpp
core/src/: core.cpp
core/src/gui/: main_window.cpp
core/src/gui/menus/: display.cpp
core/src/gui/widgets/: waterfall.cpp  waterfall.h
decoder_modules/radio/src/demodulators/: lsb.h  usb.h
misc_modules/rtltcp_server/: CMakeLists.txt
misc_modules/rtltcp_server/src/: main.cpp
sink_modules/new_portaudio_sink/src/: main.cpp
source_modules/mirisdr_source/src/: main.cpp
source_modules/soapy_source/src/: main.cpp
